WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
201436
Null deref under -[WKWebView _addUpdateVisibleContentRectPreCommitHandler]'s handler block
https://bugs.webkit.org/show_bug.cgi?id=201436
Summary
Null deref under -[WKWebView _addUpdateVisibleContentRectPreCommitHandler]'s ...
Tim Horton
Reported
2019-09-03 14:50:41 PDT
Null deref under -[WKWebView _addUpdateVisibleContentRectPreCommitHandler]'s handler block
Attachments
Patch
(2.90 KB, patch)
2019-09-03 14:51 PDT
,
Tim Horton
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2019-09-03 14:51:58 PDT
Created
attachment 377924
[details]
Patch
Tim Horton
Comment 2
2019-09-03 14:52:01 PDT
<
rdar://problem/40640475
>
WebKit Commit Bot
Comment 3
2019-09-03 16:21:44 PDT
Comment on
attachment 377924
[details]
Patch Clearing flags on attachment: 377924 Committed
r249444
: <
https://trac.webkit.org/changeset/249444
>
WebKit Commit Bot
Comment 4
2019-09-03 16:21:46 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug